tests/parser/define-class.19.bad.error
error: Malformed class definition
  --> test:4:31
   |
 4 |  (define-class (Eq :a => (C :a) :b))
   |                                 ^^ unexpected form
